--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "angular-in-memory-web-api": "^0.13.0",
+    "@types/firebase": "^3.2.1",
     "bootstrap": "^5.2.0-beta1",
+    "firebase": "^9.8.2",
     "mongodb": "^4.6.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
